Attempts to fix vertical alignment in footer

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -122,6 +122,10 @@
 }
 
 // 3. Navigation
+.widget.extendednavigation {
+	.clearfix;
+}
+
 .widget .extendednavigation ul li {
 	> .text {
 		padding: 0;
@@ -854,7 +858,6 @@ time {
 
 // 0. Footer
 .footer-contact {
-	float: left;
 	width: 100%;
 	background-color: @color-swatch4;
 	padding: 40px 0;
@@ -881,8 +884,9 @@ time {
 }
 
 .footer-socialicons {
-	.widget.profile {
+	> div {
 		display: inline-block;
+		vertical-align: middle;
 	}
 	.widget.content {
 		float: left;
